--- a/style.css
+++ b/style.css
@@ -1,9 +1,46 @@
 body {
- background-color: #ffffff;
- background-image: url("background.jpg");
- 
-}
-nav.search{
-    background-color:grey;
-    padding: 10px
-}
+    background-color: #ffffff;
+    background-image: url("background.jpg");
+    
+   }
+   nav.search{
+       background-color:grey;
+       padding: 10px
+   }
+   
+   /* Style the tab */
+   .tab {
+       overflow: hidden;
+       border: 1px solid #ccc;
+       background-color: #f1f1f1;
+     }
+     
+     /* Style the buttons that are used to open the tab content */
+     .tab button {
+       background-color: inherit;
+       float: left;
+       border: none;
+       outline: none;
+       cursor: pointer;
+       padding: 14px 16px;
+       transition: 0.3s;
+     }
+     
+     /* Change background color of buttons on hover */
+     .tab button:hover {
+       background-color: #ddd;
+     }
+     
+     /* Create an active/current tablink class */
+     .tab button.active {
+       background-color: #1df465;
+     }
+     
+     /* Style the tab content */
+     .tabcontent {
+       display: none;
+       padding: 6px 12px;
+       border: 1px solid #ccc;
+       border-top: none;
+     }
+   
