--- a/style.css
+++ b/style.css
@@ -13,16 +13,21 @@ body {
        overflow: hidden;
        border: 1px solid #ccc;
        background-color: #f1f1f1;
+       display: flex;
+       justify-content: center;
      }
      
      /* Style the buttons that are used to open the tab content */
      .tab button{
-       background-color: inherit;
-       float: left;
-       border: none;
-       outline: none;
-       cursor: pointer;
-       padding: 14px 16px;
+        background-color: inherit;
+        float: left;
+        border: none;
+        outline: none;
+        cursor: pointer;
+        width: 50px;
+        height: 50px;
+        padding: 10px 20px;
+        margin: 10px;
        transition: 0.3s;
      }
 
@@ -33,7 +38,7 @@ body {
      
      /* Create an active/current tablink class */
      .tab button.active {
-       background-color: #1df465;
+      background-color: #1df465;
      }
 
      #favLinks {
@@ -45,6 +50,7 @@ body {
      #leisure {
       background-image: url("https://static.thenounproject.com/png/2117454-200.png");
       background-size: cover;
+      
      }
 
      #restaurants {
@@ -64,9 +70,11 @@ body {
 
      /* Style the tab content */
      .tabcontent {
-       display: none;
        padding: 6px 12px;
        border: 1px solid #ccc;
        border-top: none;
+       display: none;
+       justify-content: center;
+       color: aliceblue;
      }
    
