--- a/style.css
+++ b/style.css
@@ -15,18 +15,24 @@ body {
        background-color: #f1f1f1;
        display: flex;
        justify-content: center;
+       width: 500px;
+       position: absolute;
+       top: 20%;
+       left: 50%;
+       transform: translate(-50%, -50%); 
      }
      
      /* Style the buttons that are used to open the tab content */
      .tab button{
         background-color: inherit;
         float: left;
-        border: none;
+        border: 2px solid #000000;
+        border-radius: 5px;
         outline: none;
         cursor: pointer;
         width: 50px;
         height: 50px;
-        padding: 10px 20px;
+        padding: 10px 10px;
         margin: 10px;
        transition: 0.3s;
      }
@@ -70,11 +76,16 @@ body {
 
      /* Style the tab content */
      .tabcontent {
-       padding: 6px 12px;
+       padding: 6px 10px;
        border: 1px solid #ccc;
        border-top: none;
        display: none;
        justify-content: center;
        color: aliceblue;
+       position: absolute;
+       top: 35%;
+       left: 50%;
+       width: 790px;
+       transform: translate(-50%, -50%); 
      }
    
