--- a/style.css
+++ b/style.css
@@ -1,11 +1,80 @@
 body {
  background-color: #ffffff;
- background-image: url("background.jpg");
- 
+ /*background-image: url("background.jpg");*/
+ background-image: url("background4.avif");
+
+ background-size: 80%;
+ background-position: 100% 5%;
+
+ background-repeat: no-repeat;
 }
 nav.search{
-    background-color:grey;
-    padding: 10px
+    background-color:white;
+    padding: 20px;
+}
+#title {
+    color : orange;
+    font-size: 75px;
+    margin-top : 150px;
+ }
+ul {
+  opacity : 0.8;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: white;
+}
+
+li {
+  float: right;
+}
+
+li a {
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+  background-color: #111;
+}
+
+#searchBar{
+    background-color:white;
+    padding : 10px;
+    opacity: 0.8;
+    position:absolute;
+    left:20%;
+    top:50%;
+    width:80%;
+}
+#searchBar > #destination >  #searchButton{
+    opacity : 1;
+}
+
+#destination{
+    padding : 15px;
+    width: 80%;
+    align-items: center;
+    justify-content: center;
+    margin-left: 5%;
+}
+
+#searchButton{
+    background-color: orange;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
 }
 
 .dutch, .english{
