--- a/style.css
+++ b/style.css
@@ -30,6 +30,20 @@ body {
         border-radius: 5px;
         outline: none;
         cursor: pointer;
+        width: 60px;
+        height: 60px;
+        padding: 10px 10px;
+        margin: 10px;
+       transition: 0.3s;
+     }
+
+     .tabcontent button {
+        background-color: white;
+        float: left;
+        border: 2px solid #000000;
+        border-radius: 5px;
+        outline: none;
+        cursor: pointer;
         width: 50px;
         height: 50px;
         padding: 10px 10px;
@@ -45,6 +59,11 @@ body {
      /* Create an active/current tablink class */
      .tab button.active {
       background-color: #1df465;
+     }
+
+     #like {
+      background-image: url("https://static.thenounproject.com/png/5568308-200.png");
+      background-size: cover;
      }
 
      #favLinks {
