--- a/style.css
+++ b/style.css
@@ -2,27 +2,26 @@ body {
  background-color: #ffffff;
  /*background-image: url("background.jpg");*/
  background-image: url("background4.avif");
- background-size: 80%;
- background-position: 100% 5%;
+ background-size: 100%;
+ background-position: 0% -20%;
  background-repeat: no-repeat;
 }
 nav.search{
     background-color:white;
-    padding: 20px;
 }
 #title {
     color : orange;
-    font-size: 75px;
-    margin-top : 60px;
+    font-size: 60px;
+    margin-left : 2%;
+    margin-top : 0;
  }
 
 ul {
   opacity : 0.8;
   list-style-type: none;
-  margin: 0;
-  padding: 0;
   overflow: hidden;
   background-color: white;
+  width:90%
 }
 
 li {
@@ -33,8 +32,8 @@ li a {
   display: block;
   color: black;
   text-align: center;
-  padding: 14px 16px;
   text-decoration: none;
+  padding : 3px 5px;
 }
 
 /* Change the link color to #111 (black) on hover */
@@ -45,9 +44,9 @@ li a:hover {
 #searchBar{
     background-color:white;
     padding : 10px;
-    opacity: 0.8;
+    opacity: 0.9;
     position:absolute;
-    left:20%;
+    left:10%;
     top:50%;
     width:80%;
 }
