--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ body {
        padding: 10px
    }
    
-   /* Style the tab */
    .tab {
        overflow: hidden;
        border: 1px solid #ccc;
@@ -22,7 +21,6 @@ body {
        transform: translate(-50%, -50%); 
      }
      
-     /* Style the buttons that are used to open the tab content */
      .tab button{
         background-color: inherit;
         float: left;
@@ -51,12 +49,11 @@ body {
        transition: 0.3s;
      }
 
-     /* Change background color of buttons on hover */
      .tab button:hover {
        background-color: #ddd;
      }
      
-     /* Create an active/current tablink class */
+     
      .tab button.active {
       background-color: #1df465;
      }
@@ -93,7 +90,7 @@ body {
       background-size: cover;
      }
 
-     /* Style the tab content */
+     
      .tabcontent {
        padding: 6px 10px;
        border: 10px solid black;
@@ -107,4 +104,8 @@ body {
        width: 790px;
        transform: translate(-50%, -50%); 
      }
+
+  #book, #like {
+    float: right;
+  }
    
