--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ body[data-lang="dutch"] .dutch {
   background-size: cover;
   background-color: inherit;
   float: right;
-  border: 2px solid #000000;
+  border: 2px solid #ff0000;
   border-radius: 5px;
   outline: none;
   cursor: pointer;
