--- a/style.css
+++ b/style.css
@@ -1,221 +1,271 @@
 body {
-  background-color: #ffffff;
-  /*background-image: url("background.jpg");*/
-  background-image: url("background4.avif");
-  background-size: 100%;
-  background-position: 0% -20%;
-  background-repeat: no-repeat;
-}
-nav.search {
-  background-color: white;
-}
-#title {
-  color: orange;
-  font-size: 60px;
-  margin-left: 2%;
-  margin-top: 0;
-}
+    background-color: #ffffff;
+    /*background-image: url("background.jpg");*/
+    background-image: url("background4.avif");
+    background-size: 100%;
+    background-position: 0% -20%;
+    background-repeat: no-repeat;
+  }
+  nav.search {
+    background-color: white;
+  }
+  #title {
+    color: orange;
+    font-size: 60px;
+    margin-left: 2%;
+    margin-top: 0;
+  }
+  
+  ul {
+    opacity: 0.8;
+    list-style-type: none;
+    overflow: hidden;
+    background-color: white;
+    width: 90%;
+  }
+  
+  li {
+    float: left;
+  }
+  
+  li a {
+    display: block;
+    color: black;
+    text-align: center;
+    text-decoration: none;
+    padding: 3px 5px;
+  }
+  
+  /* Change the link color to #111 (black) on hover */
+  li a:hover {
+    background-color: orange;
+  }
+  
+  #searchBar {
+    background-color: white;
+    padding: 10px;
+    opacity: 0.9;
+    position: absolute;
+    left: 10%;
+    top: 50%;
+    width: 80%;
+  }
+  
+  #destination {
+    border-radius: 8px;
+    border-color: #ffd580;
+    border-width: thin;
+    padding: 15px;
+    width: 80%;
+    align-items: center;
+    justify-content: center;
+    margin-left: 5%;
+    font-size: 20px;
+  }
 
-ul {
-  opacity: 0.8;
-  list-style-type: none;
-  overflow: hidden;
-  background-color: white;
-  width: 90%;
-}
+  #searchButton {
+    background-color: orange;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+  }
 
-li {
-  float: left;
-}
+  label{font-size: 40%}
 
-li a {
-  display: block;
-  color: black;
-  text-align: center;
-  text-decoration: none;
-  padding: 3px 5px;
-}
+  h2 {font-size: 60%; line-height:60%;}
 
-/* Change the link color to #111 (black) on hover */
-li a:hover {
-  background-color: orange;
-}
-
-#searchBar {
-  background-color: white;
-  padding: 10px;
-  opacity: 0.9;
-  position: absolute;
-  left: 10%;
-  top: 50%;
-  width: 80%;
-}
-
-#destination {
-  border-radius: 8px;
-  border-color: #ffd580;
-  border-width: thin;
-  padding: 15px;
-  width: 80%;
-  align-items: center;
-  justify-content: center;
-  margin-left: 5%;
-  font-size: 20px;
-}
-
-#searchButton {
-  background-color: orange;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-}
-
-.dutch,
-.english {
-  display: none;
-}
-
-body[data-lang="english"] .english {
-  display: block;
-}
-
-body[data-lang="dutch"] .dutch {
-  display: block;
-}
-
-#dut_button {
-  background-image: url("https://cdn-icons-png.flaticon.com/512/323/323275.png");
-  background-size: cover;
-  background-color: inherit;
-  float: right;
-  border: 2px solid #ff0000;
-  border-radius: 5px;
-  outline: none;
-  cursor: pointer;
-  width: 60px;
-  height: 60px;
-  padding: 10px 10px;
-  margin: 10px;
-  transition: 0.3s;
-}
-
-#eng_button {
-  background-image: url("https://cdn-icons-png.flaticon.com/512/197/197374.png");
-  background-size: cover;
-  background-color: inherit;
-  float: right;
-  border: 2px solid #000000;
-  border-radius: 5px;
-  outline: none;
-  cursor: pointer;
-  width: 60px;
-  height: 60px;
-  padding: 10px 10px;
-  margin: 10px;
-  transition: 0.3s;
-}
-
-.tab {
-  overflow: hidden;
-  border: 1px solid #ccc;
-  background-color: #f1f1f1;
-  display: flex;
-  justify-content: center;
-  width: 800px;
-  position: absolute;
-  top: 20%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.tab button {
-  background-color: inherit;
-  float: left;
-  border: 2px solid #000000;
-  border-radius: 5px;
-  outline: none;
-  cursor: pointer;
-  width: 60px;
-  height: 60px;
-  padding: 10px 10px;
-  margin: 10px;
-  transition: 0.3s;
-}
-
-.tabcontent button {
-  background-color: white;
-  float: left;
-  border: 2px solid #000000;
-  border-radius: 5px;
-  outline: none;
-  cursor: pointer;
-  width: 50px;
-  height: 50px;
-  padding: 10px 10px;
-  margin: 10px;
-  transition: 0.3s;
-}
-
-.tab button:hover {
-  background-color: #ddd;
-}
-
-.tab button.active {
-  background-color: #1df465;
-}
-
-#like {
-  background-image: url("https://static.thenounproject.com/png/5568308-200.png");
-  background-size: cover;
-}
-
-#favLinks {
-  background-image: url("https://static.thenounproject.com/png/5568308-200.png");
-  background-size: cover;
-  background-color: rgb(238, 46, 78);
-}
-
-#leisure {
-  background-image: url("https://static.thenounproject.com/png/2117454-200.png");
-  background-size: cover;
-}
-
-#restaurants {
-  background-image: url("https://static.thenounproject.com/png/2912457-200.png");
-  background-size: cover;
-}
-
-#transportation {
-  background-image: url("https://static.thenounproject.com/png/5322294-200.png");
-  background-size: cover;
-}
-
-#hotel {
-  background-image: url("https://static.thenounproject.com/png/633850-200.png");
-  background-size: cover;
-}
-
-.tabcontent {
-  padding: 6px 10px;
-  border: 10px solid black;
-  border-top: 10px solid black;
-  display: none;
-  justify-content: center;
-  color: black;
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  width: 790px;
-  transform: translate(-50%, -50%);
-}
-
-#book,
-#like {
-  float: right;
-}
+  div.filter{
+    text-align: center;
+    background-color: grey;
+    color: black;
+    font-size: 40px;
+    cursor: pointer; 
+    margin: 20%;
+    margin-top: 23%;
+    margin-left: 40%;
+    margin-right: 40%;
+    border-radius: 20px;
+  }
+    .range-slider {
+        position: relative;
+        text-align: center;
+    }
+    img{
+        height: 35px;
+        width: auto;
+    }
+    #filters {
+        width: 550px;
+        margin: auto;
+        background-color: lightgray;
+        border: 1px solid black;
+        overflow: hidden;
+    }
+    #ranges {
+        margin-left: 15px;
+        margin-right: 15px;
+        float:left;
+    }
+    #slider-range{
+        font-size: 50%;
+    }
+    #slider-range2{
+        font-size: 50%;
+    }
+    #sort{
+        float:left;
+        overflow:hidden;
+    }
+    #checkboxes {
+        float:left;
+        overflow: hidden;
+    }  
+  .dutch,
+  .english {
+    display: none;
+  }
+  
+  body[data-lang="english"] .english {
+    display: block;
+  }
+  
+  body[data-lang="dutch"] .dutch {
+    display: block;
+  }
+  
+  #dut_button {
+    background-image: url("https://cdn-icons-png.flaticon.com/512/323/323275.png");
+    background-size: cover;
+    background-color: inherit;
+    float: right;
+    border: 2px solid #ff0000;
+    border-radius: 5px;
+    outline: none;
+    cursor: pointer;
+    width: 60px;
+    height: 60px;
+    padding: 10px 10px;
+    margin: 10px;
+    transition: 0.3s;
+  }
+  
+  #eng_button {
+    background-image: url("https://cdn-icons-png.flaticon.com/512/197/197374.png");
+    background-size: cover;
+    background-color: inherit;
+    float: right;
+    border: 2px solid #000000;
+    border-radius: 5px;
+    outline: none;
+    cursor: pointer;
+    width: 60px;
+    height: 60px;
+    padding: 10px 10px;
+    margin: 10px;
+    transition: 0.3s;
+  }
+  
+  .tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+    display: flex;
+    justify-content: center;
+    width: 800px;
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .tab button {
+    background-color: inherit;
+    float: left;
+    border: 2px solid #000000;
+    border-radius: 5px;
+    outline: none;
+    cursor: pointer;
+    width: 60px;
+    height: 60px;
+    padding: 10px 10px;
+    margin: 10px;
+    transition: 0.3s;
+  }
+  
+  .tabcontent button {
+    background-color: white;
+    float: left;
+    border: 2px solid #000000;
+    border-radius: 5px;
+    outline: none;
+    cursor: pointer;
+    width: 50px;
+    height: 50px;
+    padding: 10px 10px;
+    margin: 10px;
+    transition: 0.3s;
+  }
+  
+  .tab button:hover {
+    background-color: #ddd;
+  }
+  
+  .tab button.active {
+    background-color: #1df465;
+  }
+  
+  #like {
+    background-image: url("https://static.thenounproject.com/png/5568308-200.png");
+    background-size: cover;
+  }
+  
+  #favLinks {
+    background-image: url("https://static.thenounproject.com/png/5568308-200.png");
+    background-size: cover;
+    background-color: rgb(238, 46, 78);
+  }
+  
+  #leisure {
+    background-image: url("https://static.thenounproject.com/png/2117454-200.png");
+    background-size: cover;
+  }
+  
+  #restaurants {
+    background-image: url("https://static.thenounproject.com/png/2912457-200.png");
+    background-size: cover;
+  }
+  
+  #transportation {
+    background-image: url("https://static.thenounproject.com/png/5322294-200.png");
+    background-size: cover;
+  }
+  
+  #hotel {
+    background-image: url("https://static.thenounproject.com/png/633850-200.png");
+    background-size: cover;
+  }
+  
+  .tabcontent {
+    padding: 6px 10px;
+    border: 10px solid black;
+    border-top: 10px solid black;
+    display: none;
+    justify-content: center;
+    color: black;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    width: 790px;
+    transform: translate(-50%, -50%);
+  }
+  
+  #book,
+  #like {
+    float: right;
+  }
