--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ body {
     background-size: cover;
     background-color: inherit;
     float: right;
-    border: 2px solid #ff0000;
+    border: 2px solid #000000;
     border-radius: 5px;
     outline: none;
     cursor: pointer;
