--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
     background-color: #ffffff;
-    /*background-image: url("background.jpg");*/
-    background-image: url("background4.avif");
-    background-size: 100%;
-    background-position: 0% -20%;
+    background-image: url("img/background.jpg");
+    background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
+    height: 100vh;
   }
   nav.search {
     background-color: white;
