--- a/style.css
+++ b/style.css
@@ -41,14 +41,20 @@ body {
     background-color: orange;
   }
   
+  #content {
+    width: 70%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+  }
+
   #searchBar {
     background-color: white;
     padding: 10px;
     opacity: 0.9;
-    position: absolute;
-    left: 10%;
-    top: 50%;
-    width: 80%;
+    border-radius: 20px
   }
   
   #destination {
@@ -86,10 +92,9 @@ body {
     color: black;
     font-size: 40px;
     cursor: pointer; 
-    margin: 20%;
-    margin-top: 23%;
-    margin-left: 40%;
-    margin-right: 40%;
+    margin: 0 auto;
+    width: 20%;
+    min-width: 200px;
     border-radius: 20px;
   }
     .range-slider {
