--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
   nav.search {
     background-color: white;
   }
+  
   #title {
     color: orange;
     font-size: 60px;
@@ -16,39 +17,46 @@ body {
     margin-top: 0;
   }
   
-  ul {
+  .search ul {
     opacity: 0.8;
     list-style-type: none;
     overflow: hidden;
     background-color: white;
-    width: 90%;
+    width: 95%;
   }
   
-  li {
-    float: left;
+  .search li {
+    float: right;
   }
   
-  li a {
+  .search li a {
     display: block;
     color: black;
     text-align: center;
     text-decoration: none;
-    padding: 3px 5px;
+    padding: 5px 5px;
   }
   
   /* Change the link color to #111 (black) on hover */
-  li a:hover {
+  .search li a:hover {
     background-color: orange;
   }
   
   #searchBar {
-    background-color: white;
+    background: radial-gradient(white);
+    box-shadow: 5px 10px 20px black;
+    backdrop-filter: blur(30px);
     padding: 10px;
-    opacity: 0.9;
+    border-radius: 10px;
+    /* background-color: white; */
+    /* opacity: 0.9; */
     position: absolute;
     left: 10%;
-    top: 50%;
+    top: 40%;
     width: 80%;
+    /* display: inline-block; */
+    display: flex;
+    justify-content: space-between;
   }
   
   #destination {
@@ -57,8 +65,6 @@ body {
     border-width: thin;
     padding: 15px;
     width: 80%;
-    align-items: center;
-    justify-content: center;
     margin-left: 5%;
     font-size: 20px;
   }
@@ -74,6 +80,7 @@ body {
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
+    border-radius: 10px;
   }
 
   label{font-size: 40%}
