--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
     background-color: #ffffff;
-    /*background-image: url("background.jpg");*/
-    background-image: url("background4.avif");
-    background-size: 100%;
-    background-position: 0% -20%;
+    background-image: url(img/background.jpg);
+    background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
+    height: 100vh;
   }
   nav.search {
     background-color: white;
@@ -42,6 +42,14 @@ body {
   .search li a:hover {
     background-color: orange;
   }
+
+div.content {
+    width: 80%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
   
   #searchBar {
     background: radial-gradient(white);
@@ -49,14 +57,6 @@ body {
     backdrop-filter: blur(30px);
     padding: 20px;
     border-radius: 10px;
-    /* background-color: white;
-    opacity: 0.9; */
-    position: absolute;
-    left: 9%;
-    top: 40%;
-    width: 80%;
-    /* display: inline-block; */
-    display: flex;
     justify-content: space-between;
   }
   
@@ -65,8 +65,8 @@ body {
     border-color: #ffd580;
     border-width: thin;
     padding: 15px;
-    width: 80%;
-    margin-left: 5%;
+    width: calc(90% - 160px);
+    margin-left: 4%;
     font-size: 20px;
   }
 
@@ -74,14 +74,16 @@ body {
     background-color: orange;
     border: none;
     color: white;
-    padding: 20px 50px;
+    padding: 20px 0px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin: 4px 2px;
+    margin-left: 1%;
+    #margin-right: 3%;
     cursor: pointer;
     border-radius: 10px;
+    width: 120px;
   }
 
   label{font-size: 40%}
@@ -92,21 +94,23 @@ body {
     /* background: radial-gradient(white);
     box-shadow: 5px 10px 20px black;
     backdrop-filter: blur(30px); */
-    background-color: white;
-    opacity: 0.8;
-
-    text-align: center;
+    #background-color:
+    white;
+    text-align: left;
+    text-align: l;
     /* background-color: grey; */
     color: black;
     font-size: 40px;
-    cursor: pointer; 
-    margin: 20%;
-    margin-top: 23%;
-    margin-left: 40%;
-    margin-right: 40%;
-    border-radius: 10px;
+    cursor: pointer;
+    margin: auto;
+    margin-top: 1em;
+    #border-radius: 10px;
     padding: 10px;
+    min-width:210px;
   }
+   p.filterSlider{
+     margin: 0.5em 0;
+   }
     .range-slider {
         position: relative;
         text-align: center;
@@ -118,17 +122,15 @@ body {
     }
 
     [id^=filters] {
-        width: 700px;
+        min-width: 20%;
+        max-width: 700px;
         margin: auto;
         background-color: lightgray;
         overflow: hidden;
+        border-radius: 20px;
+        opacity: 0.8;
     }
-    [id^=ranges] {
-
-        margin-left: 15px;
-        margin-right: 15px;
-        float:left;
-    }
+    [id^=ranges] {margin-left: 1em;margin-right: 1em;float:left;}
     #slider-range{
 
         font-size: 40%;
@@ -168,20 +170,20 @@ body {
   }
   
   body[data-lang="english"] .english {
-    display: block;
+    display: inline-block;
   }
   
   body[data-lang="dutch"] .dutch {
-    display: block;
+    display: inline-block;
   }
   
   #dut_button {
-    background-image: url("https://cdn-icons-png.flaticon.com/512/323/323275.png");
+    background-image: url("img/dutchFlag.png");
     background-size: cover;
     background-color: inherit;
     float: right;
     border: 2px solid #000000;
-    border-radius: 5px;
+    border-radius: 42px;
     outline: none;
     cursor: pointer;
     width: 60px;
@@ -192,15 +194,35 @@ body {
   }
   
   #eng_button {
-    background-image: url("https://cdn-icons-png.flaticon.com/512/197/197374.png");
+    background-image: url("img/englishFlag.png");
     background-size: cover;
     background-color: inherit;
     float: right;
     border: 2px solid #000000;
-    border-radius: 5px;
+    border-radius: 42px;
     outline: none;
     cursor: pointer;
     width: 60px;
+    height: 60px;
+    padding: 10px 10px;
+    margin: 10px;
+    transition: 0.3s;
+  }
+
+  #log_button{
+    background: radial-gradient(white);
+    box-shadow: 5px 10px 20px gray;
+    backdrop-filter: blur(30px);
+    background-image: url("https://raw.githubusercontent.com/Boterhammer/group40travel/main/img/loginButton.svg");
+    background-position:center;
+    #background-color: inherit;
+    background-repeat:no-repeat;
+    float: right;
+    border: 2px solid #000000;
+    border-radius: 42px;
+    outline: none;
+    cursor: pointer;
+    width: 120px;
     height: 60px;
     padding: 10px 10px;
     margin: 10px;
@@ -256,7 +278,7 @@ body {
   }
   
   .tab button.active {
-    background-color: #1df465;
+    backgrond-color: #1df465;
   }
   
   #home {
