quickfix active tabs

--- a/style.css
+++ b/style.css
@@ -284,7 +284,7 @@ div.content {
   }
   
   .tab button.active {
-    backgrond-color: #1df465;
+    background-color: #1df465;
   }
   
   #home {
