--- a/style.css
+++ b/style.css
@@ -52,9 +52,11 @@ div.content {
   }
   
   #searchBar {
-    background: radial-gradient(white);
+    /* background: radial-gradient(white);
     box-shadow: 5px 10px 20px gray;
-    backdrop-filter: blur(30px);
+    backdrop-filter: blur(30px); */
+    background-color: lightgray;
+    opacity: 0.8;
     padding: 20px;
     border-radius: 10px;
     justify-content: space-between;
@@ -86,82 +88,81 @@ div.content {
     width: 120px;
   }
 
-  label{font-size: 40%}
+  /* label{font-size: 40%} */
 
-  h2 {font-size: 60%; line-height:60%;}
+  /* h2 {font-size: 60%; line-height:60%;} */
 
   div.filter{
-    /* background: radial-gradient(white);
-    box-shadow: 5px 10px 20px black;
-    backdrop-filter: blur(30px); */
-    /* #background-color: */
-    /* white; */
-    text-align: left;
-    /* background-color: grey; */
-    color: black;
+    /* text-align: left; */
+    /* /* color: black;
     font-size: 40px;
     cursor: pointer;
-    margin: auto;
-    margin-top: 1em;
-    /* #border-radius: 10px; */
-    padding: 10px;
-    min-width:210px;
+    margin: auto;*/
+    /* margin-top: 1em; */
+    /*padding: 10px; */
+    /* min-width:210px; */
   }
+
   #initialfilter{
     margin: 0 auto;
+    margin-top: 5%;
     background-color: white;
     opacity:0.8;
     border-radius:10px;
     width:200px;
+    height: 60px;
+    padding-right: 10px;
   }
-   p.filterSlider{
-     margin: 0.5em 0;
-   }
-    .range-slider {
-        position: relative;
-        text-align: center;
-    }
-    
+
+  #initialfilter h3 {
+    float: left;
+    margin-left: 20%;
+    font-size: 30px;
+    margin-top: 5%;
+  }
+  #initialfilter button {
+    margin-left: 10%;
+    margin-top: 5%;
+    display: inline-block;
+  }
+
+  .hiddenfilters {
+    width: 50%;
+    margin-left: 10%;;
+    margin-top: 5%;
+    padding-bottom: 2%;
+    padding-top: 1%;
+  }
+
+  .hiddenfilters h3{
+    text-align: center;
+  }
+
+  .indexPage input[type=range]{
+    float: left;
+    margin: 0;
+  }
     img{
         height: 35px;
         width: auto;
     }
 
     [id^=filters] {
-        min-width: 20%;
-        max-width: 700px;
-        margin: auto;
+        /* min-width: 20%; */
+        /* max-width: 700px; */
+        /* margin: auto; */
         background-color: lightgray;
         overflow: hidden;
         border-radius: 20px;
-        opacity: 0.8;
+        opacity: 0.9;
+        margin-left: 25%;
     }
-    [id^=ranges] {margin-left: 1em;margin-right: 1em;float:left;}
-    #slider-range{
+    [id^=ranges] {
+      margin-left: 1em;
+      margin-right: 1em;
+      float:left;
+    }
 
-        font-size: 40%;
-    }
-    #slider-range2{
-        font-size: 40%;
-    }
-    #slider-range3{
-        font-size: 40%;
-    }
-    #slider-range4{
-        font-size: 40%;
-    }
-    #slider-range5{
-        font-size: 40%;
-    }
-    #slider-range6{
-        font-size: 40%;
-    }
-    #slider-range7{
-        font-size: 40%;
-    }
-    #slider-range8{
-        font-size: 40%;
-    }
     [id^=sort]{
         float:left;
         overflow:hidden;
@@ -169,6 +170,7 @@ div.content {
     [id^=checkboxes] {
         float:left;
         overflow: hidden;
+        margin-left: 10%;
     }  
   .dutch,
   .english {
@@ -228,7 +230,7 @@ div.content {
     border-radius: 42px;
     outline: none;
     cursor: pointer;
-    width: 120px;
+    width: 100px;
     height: 60px;
     padding: 10px 10px;
     margin: 10px;
