--- a/style.css
+++ b/style.css
@@ -98,14 +98,13 @@ div.content {
     font-size: 40px;
     cursor: pointer;
     margin: auto;*/
-    /* margin-top: 1em; */
+    margin-top: 1em;
     /*padding: 10px; */
     /* min-width:210px; */
   }
     
   #initialfilter{
     margin: 0 auto;
-    margin-top: 5%;
     background-color: white;
     opacity:0.8;
     border-radius:10px;
@@ -128,8 +127,7 @@ div.content {
 
   .hiddenfilters {
     width: 50%;
-    margin-left: 10%;;
-    margin-top: 5%;
+    margin-left: 10%;
     padding-bottom: 2%;
     padding-top: 1%;
   }
@@ -148,8 +146,8 @@ div.content {
     }
 
     [id^=filters] {
-        min-width: 20%;
-        max-width: 700px;
+        max-width: 100%;
+        width: 600px;
         margin: auto;
         background-color: lightgray;
         overflow: hidden;
