--- a/style.css
+++ b/style.css
@@ -524,3 +524,99 @@ div.content {
   display: inline;
   margin-left: 5%;
 }
+
+.inspectContent {
+  width:90%
+  margin: auto;
+  background-color:#ffffff99;
+  backdrop-filter:blur(5px);
+  border-radius:20px;
+}
+
+.inspectPictureFrame{
+  width:100%;
+  left:0px;
+}
+.inspectPictureFrame > img {
+  width: 100%;
+  height: auto;
+  max-height: 30vh;
+  border-radius:20px;
+  object-fit:cover;
+  object-position:center;
+}
+
+.inspectBar {
+  width: 90%;
+  margin: auto;
+}
+.inspectBar > h1 {
+  width:fit-content;
+  display:inline-block;
+  color:#ffa500;
+  font-family:verdana;
+  font-size:27pt;
+}
+.inspectBar > .barContent > img{
+  height:50px;
+  float:right;
+  margin:15px;
+  display:inline-block;
+}
+.inspectBar > .barContent{
+  float:right;
+  display:inline-block;
+}
+.inspectBar > .barContent > button {
+    height: 60px;
+    float:right;
+    margin:10px;
+    padding: 10px;
+    display:inline-block;
+    border-radius: 30px;
+    background-color:#ffa500;
+    color:#ffffff;
+    font-weight: bold;
+    font-size:18pt;
+}
+.inspectBar > .barContent > #like{
+    width: 60px;
+    height: 60px;
+    float:right;
+    margin:10px;
+    padding: 10px;
+    display:inline-block;
+    border-radius: 10px;
+    background-color:#ffa500;
+    color:#ffffff;
+    font-weight: bold;
+    object-size:cover;
+    object-position:center;
+}
+
+.inspectText {
+  margin-left: 5%;
+  width:calc(90% - 300px);
+  display:inline-block;
+  font-family: verdana;
+  min-height: 300px;
+}
+.inspectRating {
+  width:200px;
+  display:inline-block;
+  float:right;
+  margin-right:5%;
+  text-align:center;
+}
+.inspectRating > img{
+  width:120px;
+  height:auto;
+  border-radius:10px;
+  
+}
+.inspectRating > #map{
+  width:200px;
+  height:auto;
+  border-radius:20px;
+  
+}
